# fundxray

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  workspace.yaml
.github/workflows/: ci.yml  publish-artifact.yml
benchmarks/results/: benchmarks_20260721_1834.json  benchmarks_20260721_1932.json
benchmarks/scripts/: generate_scale_data.py  prove_recovery.py  run_benchmarks.py
core/fundxray_core/: config.py  io.py
core/fundxray_core/identifiers/: isin.py  names.py
core/fundxray_core/schemas/: __init__.py  holdings.py
core/fundxray_core/utils/: logging.py  throttle.py
docs/: architecture.md  benchmarks.md  compliance.md  data-model.md  ingestion-adapters.md  metrics.md  streaming.md
docs/adr/: 0001-iceberg-over-hive-tables.md  0002-precompute-and-serve.md  0003-isin-as-canonical-key.md
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile
pipelines/enrichment/: groq_client.py
pipelines/ingestion/adapters/: __init__.py  amc_adapters.py  base.py  base_tabular.py  generic_excel.py  (+2 more)
pipelines/lake/: iceberg_catalog.py
pipelines/orchestration/: assets.py  definitions.py
pipelines/spark/: session.py
scripts/: run_local.sh
serving/api/: main.py
serving/artifacts/: build.py
tests/: conftest.py
tests/fixtures/: make_disclosure_fixtures.py
tests/integration/: test_adapters_golden.py  test_auth_flow.py
tests/property/: test_adapter_invariants.py
tests/unit/: test_auth_security.py  test_cas_privacy.py  test_corporate_actions.py  test_isin.py  test_metrics.py
(+30 files in other folders)
