[project]
name = "fundxray"
version = "0.1.0"
description = "Transparency layer over India's mutual fund industry, built on public SEBI disclosures"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
